# Fluorine-Manager

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  PLAN.md  README.md  build-flatpak.sh  build-native.sh
crates/mo2core/: Cargo.toml
crates/mo2core/src/: fluorine.rs  gamedef.rs  global_settings.rs  lib.rs  nxm.rs  rootbuilder.rs  saves.rs
crates/mo2core/src/categories/: mod.rs
crates/mo2core/src/config/: archives.rs  executables.rs  ini.rs  locked.rs  meta_ini.rs  mod.rs  modlist.rs  organizer_ini.rs  plugins.rs  profile_settings.rs
crates/mo2core/src/conflict/: mod.rs
crates/mo2core/src/download/: mod.rs
crates/mo2core/src/install/: fomod.rs  mod.rs
crates/mo2core/src/instance/: mod.rs
crates/mo2core/src/launcher/: mod.rs  process.rs  vfs.rs  wine_prefix.rs
crates/mo2core/src/modinfo/: mod.rs
crates/mo2core/src/paths/: mod.rs
crates/mo2core/src/plugin_list/: mod.rs
crates/mo2core/src/profile/: mod.rs
crates/mo2fuse/: Cargo.toml
crates/mo2fuse/src/: filesystem.rs  inode.rs  lib.rs  mount_manager.rs  overlay.rs  overwrite.rs
crates/mo2gui/: Cargo.toml  build.rs
crates/mo2gui/src/: main.rs
crates/mo2gui/ui/: app.slint
libs/archive/src/: CMakeLists.txt  archive.cpp  compat.h  extractcallback.cpp  extractcallback.h  fileio.cpp  fileio.h  formatter.h  inputstream.cpp  inputstream.h  interfaceguids.cpp  library.h  multioutputstream.cpp  multioutputstream.h  opencallback.cpp  opencallback.h  propertyvariant.cpp  propertyvariant.h  unknown_impl.h  version.rc
libs/bsa_extractor/src/: CMakeLists.txt
libs/bsa_ffi/: CMakeLists.txt  Cargo.toml  build.rs
libs/bsa_ffi/include/: bsa_ffi.h
libs/bsa_ffi/src/: lib.rs
libs/bsa_ffi/src/archive/: mod.rs
libs/bsapacker/src/: ArchiveAutoService.cpp  ArchiveBuilderFactory.cpp  ArchiveBuilderHelper.cpp  ArchiveNameService.cpp  ArchiveNameService.h  BSArchiveEntries.cpp  BsaPacker.cpp  BsaPackerWorker.cpp  BsaPackerWorker.h  CMakeLists.txt  DummyPluginLogic.cpp  DummyPluginLogic.h  DummyPluginServiceFactory.cpp  Fallout3DummyPluginService.cpp  Fallout3DummyPluginService.h  Fallout4DummyPluginService.cpp  GeneralArchiveBuilder.cpp  HideLooseAssetService.cpp  HideLooseAssetService.h  ModContext.cpp  ModDtoFactory.cpp  NewVegasDummyPluginService.cpp  NewVegasDummyPluginService.h  NexusId.h  NullArchiveBuilder.cpp  NullDummyPluginService.cpp  OblivionDummyPluginService.cpp  OverrideFileService.cpp  OverrideFileService.h  SettingsService.cpp  SettingsService.h  SkyrimDummyPluginService.cpp  SkyrimSEDummyPluginService.cpp  StarfieldDummyPluginService.cpp  StarfieldDummyPluginService.h  TextureArchiveBuilder.cpp  TexturelessArchiveBuilder.cpp  bsa_packer_en.ts  bsapacker_global.h
libs/bsapacker/src/bsapacker/: ArchiveAutoService.h  ArchiveBuilderFactory.h  GeneralArchiveBuilder.h  IArchiveAutoService.h  IArchiveBuilder.h  IArchiveNameService.h  IDummyPluginLogic.h  IDummyPluginService.h  IOverrideFileService.h  NullArchiveBuilder.h  TextureArchiveBuilder.h  TexturelessArchiveBuilder.h
libs/bsapacker/src/qlibbsarch/: BSArchiveAuto.h  QLibbsarch.h
libs/bsatk/src/: CMakeLists.txt  bsaarchive.cpp  bsafile.cpp
libs/check_fnis/src/: CMakeLists.txt  checkfnis.cpp
libs/diagnose_basic/src/: CMakeLists.txt  diagnosebasic.cpp
libs/game_bethesda/: CMakeLists.txt
libs/game_bethesda/src/creation/: CMakeLists.txt
libs/game_features/: CMakeLists.txt
libs/installer_bain/src/: CMakeLists.txt  baincomplexinstallerdialog.ui
libs/installer_bundle/src/: CMakeLists.txt  installer_bundle_en.ts  installerbundle.cpp  installerbundle.h  multiarchivedialog.cpp  multiarchivedialog.h
libs/installer_fomod/: CMakeLists.txt
libs/installer_fomod/src/: CMakeLists.txt  fomodinstallerdialog.cpp  fomodinstallerdialog.ui  installerfomod.cpp
libs/installer_fomod_csharp/src/: CMakeLists.txt  base_script.cpp  base_script.h  csharp_interface.cpp  csharp_interface.h  csharp_utils.h  installer_fomod_csharp.cpp  installer_fomod_csharp.h  installer_fomod_csharp_en.ts  installer_fomod_postdialog.h  installer_fomod_predialog.h  psettings.h  xml_info_reader.h
libs/installer_fomod_plus/installer/: CMakeLists.txt
libs/installer_fomod_plus/patchwizard/: CMakeLists.txt
libs/installer_fomod_plus/scanner/: CMakeLists.txt
libs/installer_manual/src/: CMakeLists.txt  archivetree.cpp  archivetree.h  installdialog.cpp  installdialog.h  installdialog.ui  installer_manual_en.ts  installermanual.cpp  installermanual.h
libs/installer_omod/: .gitattributes  CMakeLists.txt  CMakePresets.json
libs/installer_omod/src/: CMakeLists.txt  DummyCSFile.cs  OMODFrameworkWrapper.cpp  OMODFrameworkWrapper.h  installerOmod.cpp  installerOmod.h  installer_omod_en.ts
libs/installer_quick/src/: CMakeLists.txt  installer_quick_en.ts  installerquick.cpp  installerquick.h  simpleinstalldialog.cpp  simpleinstalldialog.h  simpleinstalldialog.ui
libs/installer_wizard/: .gitignore  CMakeLists.txt  pyproject.toml
libs/installer_wizard/src/: __init__.py  dialog.py  installer.py  installer_wizard_en.ts
libs/lootcli/: CMakeLists.txt  vcpkg.json
libs/lootcli/cmake/: config.cmake.in
libs/lootcli/src/: CMakeLists.txt  game_settings.cpp  game_settings.h  lootthread.cpp  lootthread.h  main.cpp  pch.h  version.h  version.rc
libs/plugin_python/: CMakeLists.txt
libs/preview_bsa/src/: CMakeLists.txt
libs/uibase/: CMakeLists.txt
libs/uibase/src/: CMakeLists.txt  delayedfilewriter.cpp  diagnosisreport.cpp  errorcodes.cpp  eventfilter.cpp  executableinfo.cpp  expanderwidget.cpp  filesystemutilities.cpp  filterwidget.cpp  finddialog.cpp  finddialog.ui  guessedvalue.cpp  ifiletree.cpp  imodrepositorybridge.cpp  imoinfo.cpp  json.cpp  lineeditclear.cpp  linklabel.cpp  log.cpp  modrepositoryfileinfo.cpp  nxmurl.cpp  pch.h  pluginrequirements.cpp  questionboxmemory.cpp  questionboxmemory.ui  registry.cpp  report.cpp  safewritefile.cpp  scopeguard.cpp  sortabletreewidget.cpp  steamutility.cpp  strings.cpp  taskprogressmanager.cpp  textviewer.cpp  textviewer.ui  tutorabledialog.cpp  tutorialcontrol.cpp  tutorialmanager.cpp  utility.cpp  versioninfo.cpp  (+2 more)
(+637 files in other folders)
