[package]
name = "mo2core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
walkdir.workspace = true
unicode-normalization.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
tempfile.workspace = true
quick-xml.workspace = true
nak_rust = { git = "https://github.com/SulfurNitride/NaK", default-features = false, features = ["core", "installer"] }
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
