[package]
name = "mo2fuse"
version.workspace = true
edition.workspace = true

[dependencies]
mo2core = { path = "../mo2core" }
fuser.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true
walkdir.workspace = true
unicode-normalization.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
